--- a/templates/base.html
+++ b/templates/base.html
@@ -5,30 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"/>
     <script src="https://kit.fontawesome.com/39f5ad3fd9.js" crossorigin="anonymous"></script>
-    <link href="static/style.css" rel="stylesheet"/>
+    <link href="../static/style.css" rel="stylesheet"/>
     <title>RJ's Recipes</title>
   </head>
   <body>
   <!-- Navbar -->
     <ul class="nav justify-content-end">
       <li class="nav-item">
-        <a class="nav-link" id="nav-link" href="#">RJ's Recipes <i class="fas fa-home"></i></a>
+        <a class="nav-link" href="#">RJ's Recipes  <i class="fas fa-home"></i></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Cocktails <i class="fas fa-cocktail"></i></a>
+        <a class="nav-link" href="#">Cocktails  <i class="fas fa-cocktail"></i></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Food <i class="fas fa-utensils"></i></a>
+        <a class="nav-link" href="#">Food  <i class="fas fa-utensils"></i></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Add a Recipe <i class="fas fa-plus"></i></a>
+        <a class="nav-link" href="#">Add a Recipe  <i class="fas fa-plus"></i></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Contact <i class="fas fa-pen"></i></a>
+        <a class="nav-link" href="#">Contact  <i class="fas fa-pen"></i></a>
       </li>
     </ul>
     <!-- Block Content -->
+    {% block content %}
     
+    {% endblock %}
     <!-- Footer -->
     <footer class="container-fluid">
         <div class="row">
