--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"/>
     <script src="https://kit.fontawesome.com/39f5ad3fd9.js" crossorigin="anonymous"></script>
-    <link href="../static/style.css" rel="stylesheet"/>
+    <link href="../static/css/style.css" rel="stylesheet"/>
     <title>RJ's Recipes</title>
   </head>
   <body>
