--- a/templates/base.html
+++ b/templates/base.html
@@ -14,15 +14,19 @@
       <li class="nav-item">
         <a class="nav-link" href="#">RJ's Recipes  <i class="fas fa-home"></i></a>
       </li>
+      <span class="nav-break">|</span>
       <li class="nav-item">
         <a class="nav-link" href="#">Cocktails  <i class="fas fa-cocktail"></i></a>
       </li>
+      <span class="nav-break">|</span>
       <li class="nav-item">
         <a class="nav-link" href="#">Food  <i class="fas fa-utensils"></i></a>
       </li>
+      <span class="nav-break">|</span>
       <li class="nav-item">
         <a class="nav-link" href="#">Add a Recipe  <i class="fas fa-plus"></i></a>
       </li>
+      <span class="nav-break">|</span>
       <li class="nav-item">
         <a class="nav-link" href="#">Contact  <i class="fas fa-pen"></i></a>
       </li>
