--- a/templates/index.html
+++ b/templates/index.html
@@ -5,14 +5,17 @@
     <div class="col-12">
       <h1 id="index-header">RJ's Recipes</h1>
       <p id="index-tag">Welcome to RJ's Recipes, an online guide to your favourite cocktails and meals.</p>
+      <p id="index-tag-two">Enter the world of either cocktails or food below, and please feel free to share your recipes with us!</p>
     </div>
   </div>
-  <div class="row">
-    <div class="col-md-6" id="index-cocktail">
-        <a class="nav-link" href="#">Cocktails</a>
+  <div class="row index-menu">
+    <div class="col-md-5" id="index-cocktail">
+        <a class="menu-link" href="#">Cocktails</a>
     </div>
-    <div class="col-md-6" id="index-food">
-        <a class="nav-link" href="#">Food</a>
+    <div class="col-md-2">
+    </div>
+    <div class="col-md-5" id="index-food">
+        <a class="menu-link" href="#">Food</a>
     </div>
   </div>
 </div>
