food, cocktial, recipe and contact pages added and linked together

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,12 +10,12 @@
   </div>
   <div class="row index-menu">
     <div class="col-md-5" id="index-cocktail">
-        <a class="menu-link" href="#">Cocktails</a>
+        <a class="menu-link" href="{{ url_for('cocktail_home') }}">Cocktails</a>
     </div>
     <div class="col-md-2">
     </div>
     <div class="col-md-5" id="index-food">
-        <a class="menu-link" href="#">Food</a>
+        <a class="menu-link" href="{{ url_for('food_home') }}">Food</a>
     </div>
   </div>
 </div>
