--- a/static/css/style.css
+++ b/static/css/style.css
@@ -30,9 +30,14 @@ body {
     padding-bottom: 1.5em;
 }
 
+
 #index-cocktail {
-    border: 0.2em solid #f2f2f2;
-    height: 15em;
+    background: url("../static/images/Cocktail2.jpg") no-repeat fixed;
+    height: 15rem;
+    width: 100%;
+    position: relative;
+    align-content: center;
+    border: solid 0.2em #f2f2f2;
 }
 
 #index-food{
@@ -63,6 +68,7 @@ body {
 }
 
 .nav {
+    background-color: #262626;
     border-bottom: 0.15em solid #f2f2f2;
 }
 
