--- a/templates/base.html
+++ b/templates/base.html
@@ -12,23 +12,23 @@
   <!-- Navbar -->
     <ul class="nav justify-content-end">
       <li class="nav-item">
-        <a class="nav-link" href="#">RJ's Recipes  <i class="fas fa-home"></i></a>
+        <a class="nav-link" href="{{ url_for('index') }}">RJ's Recipes  <i class="fas fa-home"></i></a>
       </li>
       <span class="nav-break">|</span>
       <li class="nav-item">
-        <a class="nav-link" href="#">Cocktails  <i class="fas fa-cocktail"></i></a>
+        <a class="nav-link" href="{{ url_for('cocktail_home') }}">Cocktails  <i class="fas fa-cocktail"></i></a>
       </li>
       <span class="nav-break">|</span>
       <li class="nav-item">
-        <a class="nav-link" href="#">Food  <i class="fas fa-utensils"></i></a>
+        <a class="nav-link" href="{{ url_for('food_home') }}">Food  <i class="fas fa-utensils"></i></a>
       </li>
       <span class="nav-break">|</span>
       <li class="nav-item">
-        <a class="nav-link" href="#">Add a Recipe  <i class="fas fa-plus"></i></a>
+        <a class="nav-link" href="{{ url_for('add_recipe') }}">Add a Recipe  <i class="fas fa-plus"></i></a>
       </li>
       <span class="nav-break">|</span>
       <li class="nav-item">
-        <a class="nav-link" href="#">Contact  <i class="fas fa-pen"></i></a>
+        <a class="nav-link" href="{{ url_for('contact_home') }}">Contact  <i class="fas fa-pen"></i></a>
       </li>
     </ul>
     <!-- Block Content -->
