dropdown filter option added to food page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -81,6 +81,19 @@ body {
     text-decoration: none;
 }
 
+/*---------- Food Page */
+
+#filter-heading {
+    color: #ff4000;
+}
+
+#dropdownMenuButton {
+    color: #ff4000;
+    background-color: #f2f2f2;
+}
+
+
+
 /*---------- Navbar */
 
 .nav-link {
