--- a/templates/food.html
+++ b/templates/food.html
@@ -3,8 +3,30 @@
 <div class="container">
   <div class="row">
     <div class="col-12">
-      <h1 id="index-header">Food</h1>
-      <p id="index-tag">Find a recipe below and begin your cooking journey with us.</p>
+      <h1 id="index-header">Food Recipes</h1>
+      <p id="index-tag">Search for a recipe below and begin your cooking journey with us.</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12">
+        <h2 id="filter-heading">Filter your Results</h2>
+        <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle dropdown-toggle-split" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Choose a Type of Dish</button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="#">Chicken</a>
+                <a class="dropdown-item" href="#">Beef</a>
+                <a class="dropdown-item" href="#">Lamb</a>
+                <a class="dropdown-item" href="#">Pork</a>
+                <a class="dropdown-item" href="#">Fish</a>
+                <a class="dropdown-item" href="#">Other Meats</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Vegetarian</a>
+                <a class="dropdown-item" href="#">Vegan</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Desserts</a>
+            </div>
+        </div>
     </div>
   </div>
 </div>
